       the schema conversion performance.
       New ovsdb-server process will be able to read old database format, but
       old processes will *fail* to read database created by the new one, if
       conversion operation is present.  For the cluster service model follow
       upgrade instructions in 'Upgrading from version 3.1 and earlier to 3.2
       and later' section of ovsdb(7).
   - IPFIX template and statistics intervals can now be configured through two
     new options in the IPFIX table: 'template_interval' and 'stats_interval'.
   - Linux kernel datapath:
     * OVS now collects per-interface upcall statistics that can be obtained
       via 'ovs-appctl dpctl/show -s' or the interface's statistics column
       in OVSDB.  Available with upstream kernel 6.2+.
   - OVS route table in userspace now takes into account preferred source
     address from cached kernel routes.
   - ovs-appctl:
     * Add support for selecting the source address with the
       'ovs-appctl ovs/route/add' command.
     * New commands "dpctl/{ct-get-sweep-interval,ct-set-sweep-interval}" that
       allow to get and set, for the userspace datapath, the sweep interval
       for the conntrack garbage collector.
     * New commands "dpctl/dump-conntrack-exp" that allows to dump
       conntrack's expectations for the userspace datapath.
   - ovs-ctl:
     * Added new options --[ovsdb-server|ovs-vswitchd]-umask=MODE to set umask
       value when starting OVS daemons.  E.g., use --ovsdb-server-umask=0002
       in order to create OVSDB sockets with access mode of 0770.
   - QoS:
     * Added new configuration option 'jitter' for a linux-netem QoS type.
   - DPDK:
     * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
       with the --hw-rawio-access command line option.  This allows the
       process extra privileges when mapping physical interconnect memory.
     * New experimental "rx-steering=rss+<protocol>" option to redirect