@@ -10,6 +10,9 @@ Post-v3.1.0
        conversion operation is present.  For the cluster service model follow
        upgrade instructions in 'Upgrading from version 3.1 and earlier to 3.2
        and later' section of ovsdb(7).
+     * When ovsdb-server is running in relay mode, the probe interval is
+       now configurable via 'ovsdb-server/set-relay-source-probe-interval'
+       unixctl command.
    - IPFIX template and statistics intervals can now be configured through two
      new options in the IPFIX table: 'template_interval' and 'stats_interval'.
    - Linux kernel datapath:
